--- a/examples/arm-service.yaml
+++ b/examples/arm-service.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: amd64-hello-svc
+  name: arm64-hello-svc
 spec:
   type: LoadBalancer
   selector:
-    pod-name: amd64-hello
+    pod-name: arm64-hello
   ports:
     - protocol: TCP
       port: 80
